Fix wrapping of debian-fs-tor

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -652,14 +652,11 @@ div.three-blocks {
 
 #news, #security {
 	width: 31%;
+	margin-bottom: 5em;
 }
 
 #security {
 	margin-right: 0;
-}
-
-#debian-fs-tor div.three-blocks {
-	margin-top: 5em;
 }
 
 div.blocks p, div.blocks ul, div.blocks h1, div.blocks div {
